--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
-    <h1>Rust WebAssembly Number Guesser</h1>
-    
+		<h1>Rust WebAssembly Number Guesser</h1>
+		<h2>Open console to see results.</h2>
+		
 		<!-- Site-specific scripts -->
 		<script src="js/index.js"></script>
 	</body>
